--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "source": "https://github.com/hiqdev/yii2-merchant",
         "issues": "https://github.com/hiqdev/yii2-merchant/issues",
         "wiki": "https://github.com/hiqdev/yii2-merchant/wiki",
-        "forum": "https://forum.hiqdev.com/"
+        "forum": "http://forum.hiqdev.com/"
     },
     "authors": [
         {
