--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -2,8 +2,8 @@ package:
     name:           yii2-merchant
     namespace:      hiqdev\yii2\merchant
     title:          Payment merchants extension for Yii2
-    type:           library
-    keywords:       yii2, merchant, PayPal, WebMoney, Yandex.Money, eCoin, Paxum, OKpay, Qiwi
+    type:           yii2-extension
+    keywords:       yii2, merchant, PayPal, WebMoney, Yandex.Money, eCoin, Paxum, OKpay, Qiwi, InterKassa, RoboKassa
     description:    Payment merchants extension for Yii2
 
 require:
