improved package description

--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,13 @@
 {
     "name": "hiqdev/yii2-merchant",
     "type": "yii2-extension",
-    "description": "Payment merchants extension for Yii2",
+    "description": "Yii2 extension for payment processing with Omnipay, Payum and more later",
     "keywords": [
         "yii2",
         "merchant",
-        "PayPal",
-        "WebMoney",
-        "Yandex.Money",
-        "eCoin",
-        "Paxum",
-        "OKpay",
-        "Qiwi",
-        "InterKassa",
-        "RoboKassa"
+        "payment",
+        "omnipay",
+        "payum"
     ],
     "homepage": "https://github.com/hiqdev/yii2-merchant",
     "license": "BSD-3-Clause",
@@ -26,35 +20,27 @@
     },
     "authors": [
         {
-            "nick": "hiqsol",
             "name": "Andrii Vasyliev",
             "role": "Project lead",
             "email": "sol@hiqdev.com",
-            "github": "https://github.com/hiqsol",
             "homepage": "http://hipanel.com/"
         },
         {
-            "nick": "SilverFire",
             "name": "Dmitry Naumenko",
             "role": "Lead backend developer",
             "email": "silverfire@hiqdev.com",
-            "github": "https://github.com/SilverFire",
             "homepage": "http://silverfire.me/"
         },
         {
-            "nick": "tafid",
             "name": "Andrey Klochok",
             "role": "Lead frontend developer",
             "email": "tafid@hiqdev.com",
-            "github": "https://github.com/tafid",
             "homepage": "http://hiqdev.com/"
         },
         {
-            "nick": "BladeRoot",
             "name": "Yuriy Myronchuk",
             "role": "QA Lead",
             "email": "bladeroot@hiqdev.com",
-            "github": "https://github.com/BladeRoot",
             "homepage": "http://hiqdev.com/"
         }
     ],
