--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -1,10 +1,13 @@
 package:
     name:           yii2-merchant
     namespace:      hiqdev\yii2\merchant
-    title:          Payment merchants extension for Yii2
+    headline:       Yii2 Merchant
+    title:          Yii2 extension for payment processing with Omnipay, Payum and more later
     type:           yii2-extension
-    keywords:       yii2, merchant, PayPal, WebMoney, Yandex.Money, eCoin, Paxum, OKpay, Qiwi, InterKassa, RoboKassa
-    description:    Payment merchants extension for Yii2
+    keywords:       yii2, merchant, payment, omnipay, payum
+    description:    |
+        This [Yii2](http://yiiframework.com/) extension provides payment gateways integration with use of
+        [Omnipay](http://omnipay.thephpleague.com/) and [Payum](http://payum.org/) payment processing libraries.
 
 require:
     hiqdev/hidev-config:        "*"
