still redoing to omnipay

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ vendor
 # composer lock files
 composer.lock
 
+# Codeception generated files
+tests/_support/_generated
+
 # hidev internals
 .hidev/composer.json
 .hidev/composer.lock
@@ -18,3 +21,6 @@ nbproject
 .settings
 Thumbs.db
 .DS_Store
+
+# php-cs-fixer cache
+.php_cs.cache
