--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,16 @@ matrix:
 cache:
     directories:
         - $HOME/.composer/cache
+before_install:
+    - 'composer self-update'
+    - 'composer --version'
+    - 'wget http://hiqdev.com/hidev/hidev.phar -O hidev.phar && chmod a+x hidev.phar'
+    - './hidev.phar --version'
+    - './hidev.phar travis/before_install'
 sudo: false
 install:
-    - 'travis_retry composer self-update 1.0.0-alpha11'
-    - 'travis_retry composer global require "fxp/composer-asset-plugin:~1.1" "yiisoft/yii2-composer:~2.0"'
-    - 'wget http://hiqdev.com/hidev/hidev.phar && chmod a+x hidev.phar'
-    - 'travis_retry composer global require "fabpot/php-cs-fixer:*" "phpunit/phpunit-skeleton-generator:*" "phpunit/phpunit:^4.8"'
-    - 'travis_retry composer install --no-interaction'
     - './hidev.phar travis/install'
 script:
     - './hidev.phar travis/script'
+after_script:
+    - './hidev.phar travis/after_script'
