--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # hidev internals
 .hidev/composer.json
 .hidev/composer.lock
+.hidev/config-local.yml
 .hidev/vendor
 
 # IDE & OS files
@@ -13,14 +14,14 @@
 Thumbs.db
 nbproject
 
-# php-cs-fixer cache
-.php_cs.cache
-
 # vendor dirs
 vendor
 
 # composer lock files
 composer.lock
+
+# php-cs-fixer cache
+.php_cs.cache
 
 # phpunit generated files
 coverage.clover
