renamed `web` config <- hisite

--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
     },
     "extra": {
         "config-plugin": {
-            "hisite": "src/config/hisite.php"
+            "web": "src/config/web.php"
         }
     },
     "repositories": [
