--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # hidev internals
-.hidev/composer.json
-.hidev/composer.lock
-.hidev/config-local.yml
-.hidev/vendor
+/.hidev/composer.json
+/.hidev/composer.lock
+/.hidev/runtime
+/.hidev/vendor
+
+# local config
+/.env
+/hidev-local.yml
 
 # IDE & OS files
 .*.swp
@@ -14,11 +18,9 @@
 Thumbs.db
 nbproject
 
-# vendor dirs
-vendor
-
-# composer lock files
-composer.lock
+# composer internals
+/composer.lock
+/vendor
 
 # php-cs-fixer cache
 .php_cs.cache
@@ -26,9 +28,10 @@ composer.lock
 # phpunit generated files
 coverage.clover
 
-# PHARs
+# Binaries
 chkipper.phar
 composer.phar
+ocular.phar
 php-cs-fixer.phar
 phpunit-skelgen.phar
 phpunit.phar
