fixed aliased paths to real and moved config to root

--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
     },
     "extra": {
         "config-plugin": {
-            "web": "src/config/web.php"
+            "web": "config/web.php"
         }
     },
     "repositories": [
