fixed php version to be compatible with php8

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4||^8.0",
         "hiqdev/yii2-collection": "*",
         "hiqdev/payment-icons": "*",
         "hiqdev/php-merchant": "*"
